[JN-1235] initial pepper translation script (#1050)